--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,17 @@
     font-weight: 300;
     font-family: LatoWeb,sans-serif;
 }
-header{
+html{
+    background-color: #191919;
     background: url(../img/bg.png) no-repeat;
-    min-height: 100vh;
-    width:100%;
     background-position: center -60px;
     background-size: cover;
     background-attachment: fixed;
+}
+header{
+
+    min-height: 100vh;
+    width:100%;
 }
 .logo{
     height: 130px;
